@@ -1,3 +1,4 @@
+v7 5/07/2023 * Added DirectDraw autorefresh patch
 v6 5/08/2021 * Recompiled Wine, will now use SSE for floating point math.  
                Added winealsa.drv.so which will talk to Boxedwine directly.
                Added an implementation for ddraw.dll ddraw7_WaitForVerticalBlank
